added shuffle function

--- a/projects/fa/index.html
+++ b/projects/fa/index.html
@@ -258,7 +258,7 @@
 
 			<div class="row">	
 				<!-- IMAGE 1 -->
-				<div class="col-md-4 ">
+				<div class="col-sm-6 col-md-4 ">
 			    	<div class="grid mask" data-toggle="modal" href="#myModal1">
 						<figure>
 							<img class="img-responsive" src="assets/img/sites/brookdale1.jpg" alt="">
@@ -317,7 +317,7 @@
 					</div>
 			
 				<!-- IMAGE 2 -->
-				<div class="col-md-4">
+				<div class="col-sm-6 col-md-4">
 			    	<div class="grid mask" data-toggle="modal" href="#myModal2">
 						<figure>
 							<img class="img-responsive" src="assets/img/sites/garret1.jpg" alt="">
@@ -373,7 +373,7 @@
 					</div>
 
 				<!-- IMAGE 3 -->
-				<div class="col-md-4">
+				<div class="col-sm-6 col-md-4">
 			    	<div class="grid mask" data-toggle="modal" href="#myModal3">
 						<figure>
 							<img class="img-responsive" src="assets/img/sites/eaglerock1.jpg" alt="">
@@ -430,11 +430,11 @@
 						      </div>
 						    </div>
 						</div>
-			</div>
+			<!-- </div>
 		
-			<div class="row">	
+			<div class="row"> -->	
 				<!-- IMAGE 4 -->
-				<div class="col-md-4 ">
+				<div class="col-sm-6 col-md-4 ">
 			    	<div class="grid mask" data-toggle="modal" href="#myModal4">
 						<figure>
 							<img class="img-responsive" src="assets/img/sites/mills2.jpg" alt="">
@@ -490,7 +490,7 @@
 					</div>
 			
 				<!-- IMAGE 5 -->
-				<div class="col-md-4">
+				<div class="col-sm-6 col-md-4">
 			    	<div class="grid mask" data-toggle="modal" href="#myModal5">
 						<figure>
 							<img class="img-responsive" src="assets/img/sites/hilltop1.jpg" alt="">
@@ -546,7 +546,7 @@
 					</div>
 
 				<!-- IMAGE 6 -->
-				<div class="col-md-4">
+				<div class="col-sm-6 col-md-4">
 			    	<div class="grid mask" data-toggle="modal" href="#myModal6">
 						<figure>
 							<img class="img-responsive" src="assets/img/sites/westessex1.jpg" alt="">
