--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -39,11 +39,21 @@
 	<!-- <link rel="stylesheet" type="text/css" href="assets/extras/animate.css"> -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.6/animate.min.css">
 
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
+
+	<!-- Google Analytics  -->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-63064651-1', 'auto');
+		ga('send', 'pageview');
+	</script>
 
 </head>
 	<body>
@@ -96,7 +106,7 @@
 				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Story<hr></h1>
 				<div class="row">
 					<div class="container wow fadeInUp">
-						<h3>What We Do</h3>
+						<h3>Who We Are</h3>
 						Verticulture Farms operates aquaponic farms and develops innovative technologies to improve efficiencies. We utilize a vertical, multi-trophic ecological design coupled with our technology to increase the health of our systems and economic viability of our farms.
 						<br><br>
 						<h3>Social Mission</h3>
