prototyping top-view/deleted image folder

--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -26,17 +26,26 @@
 	<div id="top-view">
 		<!-- <div id="view-blog" class="buttons">BLOG</div> -->
 		<!-- <div id="view-contact" class="buttons">CONTACT</div> -->
-
-		<div id="name">HANNI ABU</div>
-		<div id="title">
-			CREATIVE DEVELOPER 
-			<br>
-			<!-- LOGIC MODEL DEVELOPER -->
-			LOGIC SOLUTIONS
+		<div class="wrapper">
+			<div id="bg1"></div>
 		</div>
-		<a href="#middle-view">
-			<div id="view-projects" class="buttons">VIEW PROJECTS</div>
-		</a>
+		<div class="wrapper">
+			<!-- <div id="bg2"></div> -->
+		</div>
+		<div class='' id="header">
+			<div class="text-bg">
+				<div id="name">HANNI ABU</div>
+				<div id="title">
+					CREATIVE DEVELOPER 
+					<br>
+					<!-- LOGIC MODEL DEVELOPER -->
+					LOGIC SOLUTIONS
+				</div>
+			</div>
+			<a href="#middle-view">
+				<div id="view-projects" class="buttons">VIEW PROJECTS</div>
+			</a>
+		</div>
 	</div>
 
 
@@ -55,7 +64,7 @@
 
 
 
-	<div id="bottom-view">
+	<!-- <div id="bottom-view">
 		<div id="contact">
 			<span>Contact</span><br>
 			Hanni Adel Abukhater<br>
@@ -74,9 +83,8 @@
 			<span>Copyright</span><br>
 			All work is &copy; 2015<br>
 			by <a>Hanni Abu</a>
-
 		</div>
-	</div>
+	</div> -->
 
 
 
