--- a/projects/vcf/index.html
+++ b/projects/vcf/index.html
@@ -73,8 +73,8 @@
 						<ul class="nav navbar-nav navbar-right" id="main_navigation_menu">
 							<li class="active"><a href="#header">Home</a></li>
 							<li><a href="#story">About</a></li>
-							<li><a href="#fish">Tilapia</a></li>
-							<li><a href="#produce">Produce</a></li>
+							<li><a href="#fish">Products</a></li>
+							<li><a href="#produce">Vision</a></li>
 							<!-- <li><a href="#team">The Team</a></li>		 -->
 							<li><a href="#contact">Contact</a></li>
 						</ul>
@@ -91,8 +91,7 @@
 						<div class="main-text overlay">
 							<h1 class="wow fadeInUp"><span>Verticulture</span> Farms</h1>
 							<h2 class="wow fadeInUp" data-wow-delay=".5s">
-								Providing Fresh and Nutritious Foods to Diverse Populations
-								<!-- Providing Fresh and Nutritious Custom Blended Herbs -->
+								Growing Fresh and Nutritious Foods for Local Communities
 							</h2>
 							<div class="wow fadeInUp" data-wow-delay="1.2s"><a onclick="smoothScr.anim('story')" class="btn btn-border btn-lg"><i class="fa fa-spinner fa-spin"></i> Explore</a></div>
 						</div>
@@ -107,13 +106,13 @@
 				<div class="row">
 					<div class="container wow fadeInUp">
 						<h3>Who We Are</h3>
-						Verticulture Farms operates aquaponic farms and develops innovative technologies to improve efficiencies. We utilize a vertical, multi-trophic ecological design coupled with our technology to increase the health of our systems and economic viability of our farms.
+						We are a team of sustainable agriculture professionals with a common mission: promoting the practice of sustainable food production in urban environments. We are committed to developing and promoting the most efficient agricultural technologies in the field of sustainable agriculture.
 						<br><br>
-						<h3>Social Mission</h3>
-						Building farms is only one part of our mission as a company. As we expand, our goal is to support and build our surrounding communities. We aim to offer healthy, affordable food and focus on outreach and education to train the next generation of urban agriculture professionals.  
+						<h3>What We Do</h3>
+						We utilize aquaponics--the marriage of hydroponics and aquaculture--in a vertical ecologically designed system. We combine ecology with our technology to maintain the health of our systems, and increase the economic viability of our farms. 
 						<br><br>
 						<h3>Where We Stand</h3>
-						Our current operation is a research and development farm on the rooftop of the old Pfizer manufacturing plant in Brooklyn, New York. We are working hard improve the viabilitiy of aquaponic farms in our to expand our operations.
+						We are growing a wide variety of plants from kale to micro basil and raising our Brooklyn-born tilapia to sell to restaurants and markets in the NYC area.
 
 					</div>
 				</div>
@@ -128,14 +127,17 @@
 		<!-- Start Fish Section -->
 		<section id="fish">
 			<div class="container">
-				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Tilapia<hr></h1>
+				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Products<hr></h1>
 				<div class="row">
 					<div class="container  wow fadeInUp">
-						<h3>Why Tilapia</h3>
-						Tilapia is our choice fish because of its resilience in varying environmental conditions, rising market demand globally, and the sustainability of raising tilapia on a commercial scale as a replacement for other commercial white fish species such as cod, which are in steep decline in the wild. Tilapia are extremely disease resistant, responsive to high density farming and offer a high feed to flesh ratio.
+						<h3>Fish</h3>
+						Tilapia is our fish of choice because of its resilience and sustainability compared to other commercial white fish (e.g., cod, haddock).
 						<br>
-						<h3>Our Fish Feed</h3>
-						Currently, we feed our fish high quality commercial feed made of chicken and fish meal, but we hope to transition to a more sustainable plant and insect based diet that will be grown on-site. Growing our own feed further closes the loop, increasing the sustainability of our farms by reducing dependency on high cost (ecological and economic) feed sources, while feeding our fish a healthier diet.
+						<h3>Produce</h3>
+						Our produce can be consumed the day it is harvested. The freshness of our product guarantees not only the best flavor but also the highest nutrition on the market. We grow a mix of vegetables that increase the health and culinary diversity of both our customers and our farm.
+						<br>
+						<h3>Custom Blends</h3>
+						We now offer custom herb and vegetable blends to chefs and food artisans in the NYC market. Custom blends can be grown within one month of order due to our agile growing methods.     
 					</div>
 				</div>
 			</div>
@@ -149,14 +151,14 @@
 		<!-- Start Produce Section -->
 		<section id="produce">
 			<div class="container">
-				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Our</span> Produce<hr></h1>
+				<h1 class="section-title wow fadeIn" data-wow-delay=".2s"><span>Sustainable</span> Vision<hr></h1>
 				<div class="row">
 					<div class="container wow fadeInUp">
-						<h3>Always Fresh</h3>
-						Verticulture Farms values diversity in the design of farms. Mixes of vegetables are grown, which work together to improve the overall health of the system by filtering water and providing an environment for micro-organisms to colonize and thrive. We offer hyper-local produce cut fresh the day it is consumed, increasesing the shelf life of our products as well as the nutrient density, feeding healthier communities in locations where we build our farms. 
+						<h3>Environmental</h3>
+						We are committed to developing growing practices that reduce waste and conserve natural resources. We do this by producing our own feed from plants and insects, composting all of our waste and conserving 90% of the water that we use.
 						<br>
-						<h3>Custom Blends</h3>
-						We now offer custom herb and vegetable blends to chefs and food artisans in the NYC market on a revolving basis. Custom blends can be grown within one month of order due to our agile growing methods.
+						<h3>Social</h3>
+						Building farms is only one part of our mission as a company. As we expand, our goal is to support and build our surrounding communities. We aim to offer healthy, affordable food and focus on outreach and education to train the next generation of urban agriculture professionals. 
 
 					</div>
 				</div>
