still throwing ideas around

--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -27,10 +27,12 @@
 		<!-- <div id="view-blog" class="buttons">BLOG</div> -->
 		<!-- <div id="view-contact" class="buttons">CONTACT</div> -->
 		<div class="wrapper">
-			<div id="bg1"></div>
+			<!-- <div id="bg1"></div> -->
 		</div>
 		<div class="wrapper">
-			<!-- <div id="bg2"></div> -->
+			<div id="bg2"></div>
+		</div>
+		<div class="wrapper">
 		</div>
 		<div class='' id="header">
 			<div class="text-bg">
@@ -43,6 +45,7 @@
 				</div>
 			</div>
 			<a href="#middle-view">
+				<img id="bg3" src="assets/img/trans.gif">
 				<div id="view-projects" class="buttons">VIEW PROJECTS</div>
 			</a>
 		</div>
