still playing with ideas

--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -27,7 +27,7 @@
 		<!-- <div id="view-blog" class="buttons">BLOG</div> -->
 		<!-- <div id="view-contact" class="buttons">CONTACT</div> -->
 		<div class="wrapper">
-			<!-- <div id="bg1"></div> -->
+			<div id="bg1"></div>
 		</div>
 		<div class="wrapper">
 			<div id="bg2"></div>
@@ -36,7 +36,7 @@
 		</div>
 		<div class='' id="header">
 			<div class="text-bg">
-				<div id="name">HANNI ABU</div>
+				<div id="name">HANNI <br class="name"> ABU</div>
 				<div id="title">
 					CREATIVE DEVELOPER 
 					<br>
@@ -45,8 +45,8 @@
 				</div>
 			</div>
 			<a href="#middle-view">
-				<img id="bg3" src="assets/img/trans.gif">
 				<div id="view-projects" class="buttons">VIEW PROJECTS</div>
+				<!-- <img id="bg3" src="assets/img/trans.gif"> -->
 			</a>
 		</div>
 	</div>
