--- a/projects/ms/5/index.html
+++ b/projects/ms/5/index.html
@@ -24,6 +24,9 @@
 </head>
 <body>
 	<iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="https://hanniabu.typeform.com/to/WM3iLS"></iframe>
-	<script type="text/javascript" src="https://s3-eu-west-1.amazonaws.com/share.typeform.com/embed.js"></script>
+	<script type="text/javascript">
+document.getElementById("typeform").contentWindow.focus()
+</script>
+	<!-- // <script type="text/javascript" src="https://s3-eu-west-1.amazonaws.com/share.typeform.com/embed.js"></script> -->
 </body>
 </html>
