--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                         <article>
                                             <a href="https://hanniabu.com/projects/vcf/" target="_blank">
 	                                            <h3>Verticulture Farms</h3>
-	                                            <img src="assets/img/vcf.jpg" alt="Verticulture Farms">
+	                                            <img src="assets/img/vcf.JPG" alt="Verticulture Farms">
 	                                            <p>A website for my friend's Brooklyn-based aquaponic company.</p>
                                             </a>
                                         </article>
@@ -247,7 +247,7 @@
 
 
 
-	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
