formatted resume download link

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-6 col-md-offset-3 center">
 					<a href="assets/docs/Hanni Abu Resume.pdf" target="_blank" class="buttons">View My Resume</a>
-					<p>Or <a href="assets/docs/Hanni Abu Resume.pdf" download><span>Download</span></a> (77KB, in PDF)</p>
+					<p><a href="assets/docs/Hanni Abu Resume.pdf" download>Or Download (77KB, in PDF)</a></p>
 				</div>
 			</div>
 		</div>
