--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
         <meta name="twitter:image" content="assets/img/logo.gif">
 
         <script>
-		  // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-		  // ga('create', 'UA-63358219-1', 'auto');
-		  // ga('send', 'pageview');
+		  ga('create', 'UA-63358219-1', 'auto');
+		  ga('send', 'pageview');
 
 		</script>
 </head>
 <body>
-	<div id="header">
+	<section id="header">
 			<div id="name">HANNI<br class="name"> ABU</div>
 			<div id="title">
 				CREATIVE DEVELOPER 
@@ -46,12 +46,11 @@
 			</div>
 			<a id="view-projects" class="buttons" href="#projects">VIEW PROJECTS
 			</a>
-	</div>
+			<a class="arrow bounce" href="#talent"></a>
+	</section>
 
 
-
-
-	<section id="talent">
+	<section id="talent" class="next">
 		<div class="container">
 			<div class="row title">
 				How can I help you?
@@ -230,7 +229,7 @@
 
 
 
-	<div id="footer">
+	<section id="footer">
 		<div class="container">
 				<div class="row title">
 					Keep in touch
@@ -240,8 +239,7 @@
 			<p>hanniabu@gmail.com</p>
 			<img src="assets/img/logo.gif">
 		</div>
-	</div>
-
+	</section>
 
 
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
