cleaned up file head

--- a/index.html
+++ b/index.html
@@ -3,37 +3,48 @@
 <head>
 		<meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1. maximum-scale=1">
+		<title>Hanni Abu // Developer</title>
+
+		
+        <meta name="description" content="Hanni Abu is a creative developer and logic engineer living in Clifton, New Jersey.">
+		<meta name="keywords" content="developer, designer, clifton, new jersey, north jersey, hanni abu, web">
+        <meta name="author" content="Hanni Abu">
+		<meta name="copyright" content="© 2015, Hanni Abu. All rights reserved.">
+		<meta name="robots" content="index,follow">
+
         <link rel="icon" type="image/gif" href="assets/img/logo.gif" />
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-		<link href="assets/css/style.css" rel="stylesheet" type="text/css" media="screen" />
-		<link href="assets/css/slider.css" rel="stylesheet" type="text/css" media="screen" />
+		<!-- CSS assets -->
+		<link rel="stylesheet" href="assets/css/bootstrap-grid.min.css">
+		<link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
+		<link href="assets/css/slider.css" rel="stylesheet" type="text/css"/>
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"> -->
 		
-		<title>Hanni Abu // Developer</title>
-        <meta name="description" content="Hanni Abu is a creative developer and logic engineer living in Clifton, New Jersey.">
-        <meta name="author" content="Hanni Abu">
-		<meta name="robots" content="index,follow,archive">
+
+		<!-- Open Graph Tags -->
         <meta property="og:locale" content="en_us">
         <meta property="og:title" content="Hanni Abu // Developer">
-        <meta property="og:url" content="index.html">
-        <meta property="og:site_name" content="Hanni Abu // Developer">
         <meta property="og:type" content="website">
-        <meta property="og:description" content="Hanni Abu is a creative developer and logic engineer living in Clifton, New Jersey.">
+        <meta property="og:url" content="index.html">
         <meta property="og:image" content="assets/img/logo.gif">
+        <meta property="og:site_name" content="Hanni Abu // Developer">
+        <meta property="og:description" content="Hanni Abu is a creative developer and logic engineer living in Clifton, New Jersey.">
+
+        <!-- Twitter Tags -->
         <meta name="twitter:url" content="index.html">
         <meta name="twitter:title" content="Hanni Abu // Developer">
         <meta name="twitter:description" content="Hanni Abu is a creative developer and logic engineer living in Clifton, New Jersey.">
         <meta name="twitter:image" content="assets/img/logo.gif">
 
+        <!-- Google Analytics -->
         <script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
 		  ga('create', 'UA-63358219-1', 'auto');
 		  ga('send', 'pageview');
-
 		</script>
 </head>
 <body>
@@ -228,7 +239,6 @@
 	</section>
 
 
-
 	<section id="footer">
 		<div class="container">
 				<div class="row title">
@@ -242,7 +252,7 @@
 	</section>
 
 
-	<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+	// <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
