edited projects and 'iCan' text/wording/pretenses

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 				<div class="col-sm-7 iCan">
 					<h4>I can help you</h4>
 					<ul class="checkmark">
-						<li>Coding <strong>interactive prototypes</strong>.</li>
+						<li>Code <strong>interactive prototypes</strong>.</li>
 						<li>Convert prepared graphics into <strong>nice and responsive HTML &amp; CSS code</strong>.</li>
-						<li>Adding <strong>interactivity to your sites</strong> and apps through JavaScript.</li>
-						<li>Coding a <strong>simple cross-platform app</strong> using HTML5.</li>
+						<li>Add <strong>interactivity to your sites</strong> and apps through JavaScript.</li>
+						<li>Code <strong>simple cross-platform app</strong> using HTML5.</li>
 						<li><strong>Maintain and update</strong> your website and content.</li>
 						<li>Create detailed <strong>business operation calculators</strong>.</li>
 					</ul>
@@ -114,7 +114,7 @@
 				<div class="col-sm-7 iCan">
 					<h4>I can help you</h4>
 					<ul class="checkmark">
-						<li><strong>Sketching wireframes</strong> for your new projects.</li>
+						<li><strong>Sketch wireframes</strong> for your new projects.</li>
 						<li>Create <strong>eye-catching landing pages</strong>.</li>
 						<li>Design your new <strong>website from scratch</strong>.</li>
 						<li><strong>Create a user interface</strong> for your new app.</li>
@@ -176,14 +176,14 @@
 	                                    	<a href="https://furryadventure.com/" target="_blank">
 	                                            <h3>Furry Adventures</h3>
 	                                            <img src="assets/img/fa.JPG" alt="Furry Adventures">
-	                                            <p>A website for my girlfriend's dog service business.</p>
+	                                            <p>A website for a local dog walking service.</p>
 	                                        </a>
 	                                    </article>
 	                                    <article>
 	                                        <a href="https://hanniabu.com/projects/vcf/" target="_blank">
 	                                            <h3>Verticulture Farms</h3>
 	                                            <img src="assets/img/vcf.JPG" alt="Verticulture Farms">
-	                                            <p>A website for my friend's Brooklyn-based aquaponic company.</p>
+	                                            <p>A landing page for a Brooklyn-based aquaponic company.</p>
 	                                        </a>
 	                                    </article>
                                     </div>
