--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						</li>
 						<li>
 							<span>Basic understanding of</span>
-							<div>PHP &amp; Node</div>
+							<div>Node, PHP &amp; VB.NET</div>
 						</li>
 						<li>
 							<span>Toolbox</span>  
