--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 <head>
-	<meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1. maximum-scale=1">
 
-	<title>Hanni Abu // Developer</title>
+    <title>Hanni Abu // Developer</title>
     <meta name="description" content="Hanni Abu is a creative developer and logic engineer living in Clifton, New Jersey.">
-	<meta name="keywords" content="developer, designer, clifton, new jersey, north jersey, hanni abu, web">
+    <meta name="keywords" content="developer, designer, clifton, new jersey, north jersey, hanni abu, web">
     <meta name="author" content="Hanni Abu">
-	<meta name="copyright" content="© 2015, Hanni Abu. All rights reserved.">
-	<meta name="robots" content="index,follow">
+    <meta name="copyright" content="© 2015, Hanni Abu. All rights reserved.">
+    <meta name="robots" content="index,follow">
     <link rel="icon" type="image/gif" href="assets/img/logo.gif" />
 
-	<!-- CSS assets -->
-	<link rel="stylesheet" href="assets/css/bootstrap-grid.min.css">
-	<link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
-	<link href="assets/css/slider.css" rel="stylesheet" type="text/css"/>
+    <!-- CSS assets -->
+    <link rel="stylesheet" href="assets/css/bootstrap-grid.min.css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/slider.css" rel="stylesheet" type="text/css"/>
 
-	<!-- Open Graph Tags -->
+    <!-- Open Graph Tags -->
     <meta property="og:locale" content="en_us">
     <meta property="og:title" content="Hanni Abu // Developer">
     <meta property="og:type" content="website">
@@ -34,125 +34,125 @@
 
     <!-- Google Analytics -->
     <script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	  ga('create', 'UA-63358219-1', 'auto');
-	  ga('send', 'pageview');
-	</script>
-	
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-63358219-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+    
 </head>
 <body>
-	<section id="header">
-			<div id="name">HANNI<br class="name"> ABU</div>
-			<div id="title">
-				CREATIVE DEVELOPER 
-				<br>
-				LOGIC SOLUTIONS
-			</div>
-			<a id="view-projects" class="buttons" href="#projects">VIEW PROJECTS
-			</a>
-			<a class="arrow bounce" href="#talent"></a>
-	</section>
+    <header id="header">
+            <div id="name">HANNI<br class="name"> ABU</div>
+            <div id="title">
+                CREATIVE DEVELOPER 
+                <br>
+                LOGIC SOLUTIONS
+            </div>
+            <a id="view-projects" class="buttons" href="#projects">VIEW PROJECTS
+            </a>
+            <a class="arrow bounce" href="#talent"></a>
+    </header>
 
 
-	<section id="talent" class="next">
-		<div class="container">
-			<div class="row title">
-				How can I help you?
-				<hr>
-			</div>
-			<div class="row skills">
-				<div class="col-sm-4">
-					<h3>Coding Skills</h3>
-					<hr>
-					<ul class="noBull">
-						<li>
-							<span>Front-end development</span>
-							<div>HTML, CSS, JavaScript</div>
-						</li>
-						<li>
-							<span>Basic understanding of</span>
-							<div>Node, PHP &amp; VB.NET</div>
-						</li>
-						<li>
-							<span>Toolbox</span>  
-							<div>jQuery, Git &amp; Sublime Text 3</div>
-						</li>
-					</ul>
-				</div>
-				<div class="col-sm-1 hidden-xs curly">
-					<span>}</span>
-				</div>
-				<div class="col-sm-7 iCan">
-					<h4>I can help you</h4>
-					<ul class="checkmark">
-						<li>Code <strong>interactive prototypes</strong>.</li>
-						<li>Convert prepared graphics into <strong>nice and responsive HTML &amp; CSS code</strong>.</li>
-						<li>Add <strong>interactivity to your sites</strong> and apps through JavaScript.</li>
-						<li>Code <strong>simple cross-platform app</strong> using HTML5.</li>
-						<li><strong>Maintain and update</strong> your website and content.</li>
-						<li>Create detailed <strong>business operation calculators</strong>.</li>
-					</ul>
-				</div>
-			</div>
-
-			<div class="row skills">
-				<div class="col-sm-4">
-					<h3>Design Skills</h3>
-					<hr>
-					<ul class="noBull">
-						<li><div>Web Design</div></li>
-						<li><div>Mobile App Design</div></li>
-						<li><div>User Interface Design</div></li>
-					</ul>
-				</div>
-				<div class="col-sm-1 hidden-xs curly">
+    <section id="talent" class="next">
+        <div class="container">
+            <div class="row title">
+                How can I help you?
+                <hr>
+            </div>
+            <div class="row skills">
+                <div class="col-sm-4">
+                    <h3>Coding Skills</h3>
+                    <hr>
+                    <ul class="noBull">
+                        <li>
+                            <span>Front-end development</span>
+                            <div>HTML, CSS, JavaScript</div>
+                        </li>
+                        <li>
+                            <span>Basic understanding of</span>
+                            <div>Node, PHP &amp; VB.NET</div>
+                        </li>
+                        <li>
+                            <span>Toolbox</span>  
+                            <div>jQuery, Git &amp; Sublime Text 3</div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-1 hidden-xs curly">
                     <span>}</span>
                 </div>
-				<div class="col-sm-7 iCan">
-					<h4>I can help you</h4>
-					<ul class="checkmark">
-						<li><strong>Sketch wireframes</strong> for your new projects.</li>
-						<li>Create <strong>eye-catching landing pages</strong>.</li>
-						<li>Design your new <strong>website from scratch</strong>.</li>
-						<li><strong>Create a user interface</strong> for your new app.</li>
-					</ul>
-					<p>All with a focus on User Experience.</p>
-				</div>
-			</div>
-		</div>
-	</section>
+                <div class="col-sm-7 iCan">
+                    <h4>I can help you</h4>
+                    <ul class="checkmark">
+                        <li>Code <strong>interactive prototypes</strong>.</li>
+                        <li>Convert prepared graphics into <strong>nice and responsive HTML &amp; CSS code</strong>.</li>
+                        <li>Add <strong>interactivity to your sites</strong> and apps through JavaScript.</li>
+                        <li>Code <strong>simple cross-platform app</strong> using HTML5.</li>
+                        <li><strong>Maintain and update</strong> your website and content.</li>
+                        <li>Create detailed <strong>business operation calculators</strong>.</li>
+                    </ul>
+                </div>
+            </div>
 
-	<section id="benefit">
-		<div class="container white">
-			<div class="row title">
-					I can benefit your team by
-					<hr>
-			</div>
-			<div class="row">
-				<div class="col-sm-12 col-md-8 col-md-offset-2">
-					<ul class="checkmark white">
-						<li>Taking your business to the <strong>next level</strong> with <strong>time-saving business solutions</strong>.</li>
-						<li>Improving <strong>user retention</strong> and  <strong>increase sales</strong>.</li>
-						<li>Working on ideas you never had time to realize.</li>
-						<li>Bringing <strong>new ideas</strong>. See things from a <strong>different point of view</strong>.</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</section>
+            <div class="row skills">
+                <div class="col-sm-4">
+                    <h3>Design Skills</h3>
+                    <hr>
+                    <ul class="noBull">
+                        <li><div>Web Design</div></li>
+                        <li><div>Mobile App Design</div></li>
+                        <li><div>User Interface Design</div></li>
+                    </ul>
+                </div>
+                <div class="col-sm-1 hidden-xs curly">
+                    <span>}</span>
+                </div>
+                <div class="col-sm-7 iCan">
+                    <h4>I can help you</h4>
+                    <ul class="checkmark">
+                        <li><strong>Sketch wireframes</strong> for your new projects.</li>
+                        <li>Create <strong>eye-catching landing pages</strong>.</li>
+                        <li>Design your new <strong>website from scratch</strong>.</li>
+                        <li><strong>Create a user interface</strong> for your new app.</li>
+                    </ul>
+                    <p>All with a focus on User Experience.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="benefit">
+        <div class="container white">
+            <div class="row title">
+                    I can benefit your team by
+                    <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-8 col-md-offset-2">
+                    <ul class="checkmark white">
+                        <li>Taking your business to the <strong>next level</strong> with <strong>time-saving business solutions</strong>.</li>
+                        <li>Improving <strong>user retention</strong> and  <strong>increase sales</strong>.</li>
+                        <li>Working on ideas you never had time to realize.</li>
+                        <li>Bringing <strong>new ideas</strong>. See things from a <strong>different point of view</strong>.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
-	<section id="projects">
-		<div class="container">
-			<div class="row title">
-					Projects
-					<hr>
-			</div>
-			<div class="row">
-				<div class="col-sm-12 col-md-6 col-md-offset-3">
+    <section id="projects">
+        <div class="container">
+            <div class="row title">
+                    Projects
+                    <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-md-offset-3">
 
 
                     <article id="slider">
@@ -172,20 +172,20 @@
                             <div id="slides">
                                 <div id="overflow">
                                     <div class="inner">
-	                                    <article>
-	                                    	<a href="https://furryadventure.com/" target="_blank">
-	                                            <h3>Furry Adventures</h3>
-	                                            <img src="assets/img/fa.JPG" alt="Furry Adventures">
-	                                            <p>A website for a local dog walking service.</p>
-	                                        </a>
-	                                    </article>
-	                                    <article>
-	                                        <a href="https://hanniabu.com/projects/vcf/" target="_blank">
-	                                            <h3>Verticulture Farms</h3>
-	                                            <img src="assets/img/vcf.JPG" alt="Verticulture Farms">
-	                                            <p>A landing page for a Brooklyn-based aquaponic company.</p>
-	                                        </a>
-	                                    </article>
+                                        <article>
+                                            <a href="https://furryadventure.com/" target="_blank">
+                                                <h3>Furry Adventures</h3>
+                                                <img src="assets/img/fa.JPG" alt="Furry Adventures">
+                                                <p>A website for a local dog walking service.</p>
+                                            </a>
+                                        </article>
+                                        <article>
+                                            <a href="https://hanniabu.com/projects/vcf/" target="_blank">
+                                                <h3>Verticulture Farms</h3>
+                                                <img src="assets/img/vcf.JPG" alt="Verticulture Farms">
+                                                <p>A landing page for a Brooklyn-based aquaponic company.</p>
+                                            </a>
+                                        </article>
                                     </div>
                                 </div>
                             </div>
@@ -213,43 +213,43 @@
                                 <label for="slide8"></label> -->
                             </div>
                     </article>
-				</div>
-			</div>
-		</div>
-	</section>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
-	<section id="resume">
-		<div class="container">
-			<div class="row title">
-				Want to learn more?
-				<hr>
-			</div>
-			<div class="row">
-				<div class="col-sm-12 col-md-6 col-md-offset-3 center">
-					<a href="assets/docs/Hanni Abu Resume.pdf" target="_blank" class="buttons">View My Resume</a>
-					<p><a href="assets/docs/Hanni Abu Resume.pdf" download>Or Download (77KB, in PDF)</a></p>
-				</div>
-			</div>
-		</div>
-	</section>
+    <section id="resume">
+        <div class="container">
+            <div class="row title">
+                Want to learn more?
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-md-offset-3 center">
+                    <a href="https://hanniabu.com/assets/docs/Hanni%20Abu%20Resume.pdf" target="_blank" class="buttons">View My Resume</a>
+                    <p><a href="https://hanniabu.com/assets/docs/Hanni%20Abu%20Resume.pdf" download>Or Download (77KB, in PDF)</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
-	<section id="footer">
-		<div class="container">
-				<div class="row title">
-					Keep in touch
-					<hr>
-				</div>
-			<div>Just shoot me an e-mail to connect</div>
-			<p>hanniabu@gmail.com</p>
-			<img src="assets/img/logo.gif">
-		</div>
-	</section>
+    <section id="footer">
+        <div class="container">
+                <div class="row title">
+                    Keep in touch
+                    <hr>
+                </div>
+            <div>Just shoot me an e-mail to connect</div>
+            <p>hanniabu@gmail.com</p>
+            <img src="assets/img/logo.gif" alt="Hanni Abu">
+        </div>
+    </section>
 
 
-	// <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="assets/js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
