--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
                     <hr>
                     <ul class="noBull">
                         <li>
-                            <span>Front-end development</span>
-                            <div>HTML, CSS, JavaScript</div>
+                            <span>Development Languages</span>
+                            <div>PHP, Javascript, SQL</div>
                         </li>
                         <li>
                             <span>Basic understanding of</span>
-                            <div>Node, PHP &amp; VB.NET</div>
+                            <div>Node.js &amp; Python</div>
                         </li>
                         <li>
                             <span>Toolbox</span>  
-                            <div>jQuery, Git &amp; Sublime Text 3</div>
+                            <div>Arduino &amp; Raspberry Pi</div>
                         </li>
                     </ul>
                 </div>
@@ -88,12 +88,12 @@
                 <div class="col-sm-7 iCan">
                     <h4>I can help you</h4>
                     <ul class="checkmark">
+                    	<li>Create <strong>automated procedures</strong> within your business.</li>
+                        <li><strong>Maintain and update</strong> your website content and database.</li>
+                    	<li>Translate <strong>valuable data</strong> to inform decisions.</li>
                         <li>Code <strong>interactive prototypes</strong>.</li>
                         <li>Convert prepared graphics into <strong>nice and responsive HTML &amp; CSS code</strong>.</li>
                         <li>Add <strong>interactivity to your sites</strong> and apps through JavaScript.</li>
-                        <li>Code <strong>simple cross-platform app</strong> using HTML5.</li>
-                        <li><strong>Maintain and update</strong> your website and content.</li>
-                        <li>Create detailed <strong>business operation calculators</strong>.</li>
                     </ul>
                 </div>
             </div>
