--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </li>
                         <li>
                             <span>Toolbox</span>  
-                            <div>Arduino &amp; Raspberry Pi</div>
+                            <div>Raspberry Pi &amp; Wordpress</div>
                         </li>
                     </ul>
                 </div>
@@ -90,7 +90,7 @@
                     <ul class="checkmark">
                     	<li>Create <strong>automated procedures</strong> within your business.</li>
                         <li><strong>Maintain and update</strong> your website content and database.</li>
-                    	<li>Translate <strong>valuable data</strong> to inform decisions.</li>
+                    	<li>Translate <strong>valuable data</strong> to inform in decision-making.</li>
                         <li>Code <strong>interactive prototypes</strong>.</li>
                         <li>Convert prepared graphics into <strong>nice and responsive HTML &amp; CSS code</strong>.</li>
                         <li>Add <strong>interactivity to your sites</strong> and apps through JavaScript.</li>
