--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </li>
                         <li>
                             <span>Basic Understanding of</span>
-                            <div>Node.js &amp; Python</div>
+                            <div>Node.js, Python &amp; C+</div>
                         </li>
                         <li>
                             <span>Toolbox</span>  
