--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                     <ul class="noBull">
                         <li>
                             <span>Development Languages</span>
-                            <div>PHP, Javascript, SQL</div>
+                            <div>PHP, Javascript &amp; SQL</div>
                         </li>
                         <li>
                             <span>Basic Understanding of</span>
-                            <div>Node.js, Python &amp; C+</div>
+                            <div>Node.js, C+ &amp; Python</div>
                         </li>
                         <li>
                             <span>Toolbox</span>  
