made call for new-game-button an id instead of a class

--- a/tests/CopyPaste/index.html
+++ b/tests/CopyPaste/index.html
@@ -16,7 +16,7 @@
 <body>
 
 	<!-- Load Screen -->
-	<section id="load-screen" class="screen hide">
+	<section id="load-screen" class="screen">
 	</section>
 
 	<!-- High Score Screen -->
@@ -90,7 +90,7 @@
 				<div id="paste-value" class="right">1</div>
 			</div>
 			<!-- Reset Button -->
-			<span id="reset-button" class="new-game-button"><img src="assets/img/reset.png"></span>
+			<span id="new-game-button"><img src="assets/img/reset.png"></span>
 			<!-- High Score -->
 			<div class="row center">
 				<div id="high-score">High Score: <span id="current-high-score">0</span></div>
