--- a/portfolio-site/unminified/portfolio.html
+++ b/portfolio-site/unminified/portfolio.html
@@ -2,14 +2,11 @@
 <html dir="ltr" lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1, minimum-scale=1. maximum-scale=1" name=
-  "viewport">
+  <meta content="width=device-width, initial-scale=1, minimum-scale=1. maximum-scale=1" name="viewport">
   <title>Hanni Abu // Developer</title>
-  <meta content=
-  "Hanni Abu is a software developer and engineer living in Clifton, New Jersey." name=
+  <meta content="Hanni Abu is a software developer and engineer living in Clifton, New Jersey." name=
   "description">
-  <meta content="engineer, software, developer, clifton, new jersey, north jersey, hanni abu, web" name=
-  "keywords">
+  <meta content="engineer, software, developer, clifton, new jersey, north jersey, hanni abu, web" name="keywords">
   <meta content="Hanni Abu" name="author">
   <meta content="© 2015, Hanni Abu. All rights reserved." name="copyright">
   <meta content="index,follow" name="robots">
@@ -23,13 +20,10 @@
   <meta content="index.html">
   <meta content="assets/img/logo.gif">
   <meta content="Hanni Abu // Developer">
-  <meta content=
-  "Hanni Abu is a software developer and engineer living in Clifton, New Jersey.">
+  <meta content="Hanni Abu is a software developer and engineer living in Clifton, New Jersey.">
   <meta content="index.html" name="twitter:url">
   <meta content="Hanni Abu // Developer" name="twitter:title">
-  <meta content=
-  "Hanni Abu is a software developer and engineer living in Clifton, New Jersey." name=
-  "twitter:description">
+  <meta content="Hanni Abu is a software developer and engineer living in Clifton, New Jersey." name="twitter:description">
   <meta content="assets/img/logo.gif" name="twitter:image">
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-63358219-1', 'auto'); ga('send', 'pageview'); 
