initial commit of simplified site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" name=
   "viewport">
-  <title>Hanni Abu // Developer</title>
+  <title>Hanni Abu</title>
   <meta content=
   "Hanni Abu is a software developer and engineer living in Clifton, New Jersey." name=
   "description">
