updated meta description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   "viewport">
   <title>Hanni Abu</title>
   <meta content=
-  "Hanni Abu is a software developer and engineer living in Clifton, New Jersey." name=
+  "Hanni Abu is a software developer, engineer, and blockchain enthusiast." name=
   "description">
   <meta content="engineer, software, developer, blockchain, hanni abu, web" name=
   "keywords">
