--- a/color-compare.html
+++ b/color-compare.html
@@ -1,8 +1,31 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Color Compare</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<meta charset="UTF-8">
+		<meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" name="viewport">
+		<title>Hanni Abu | Color Compare</title>
+		<meta content="Easily compare multiple colors side-by-side online for free." name="description">
+		<meta content="color, compare, online, free hex, rgb, rgba" name="keywords">
+		<meta content="Hanni Abu" name="author">
+		<meta content="© 2015, Hanni Abu. All rights reserved." name="copyright">
+		<meta content="index,follow" name="robots">
+		<link href="assets/img/logo.gif" rel="icon" type="image/gif">
+		<link href="assets/css/style.css" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" type="text/css">
+		<meta content="en_us">
+		<meta content="Hanni Abu">
+		<meta content="website">
+		<meta content="index.html">
+		<meta content="assets/img/logo.gif">
+		<meta content="Easily compare multiple colors side-by-side online for free.">
+		<meta content="index.html" name="twitter:url">
+		<meta content="Hanni Abu | Color Compare" name="twitter:title">
+		<meta content="Easily compare multiple colors side-by-side online for free." name="twitter:description">
+		<meta content="assets/img/logo.gif" name="twitter:image">
+		<script async="" src="//www.google-analytics.com/analytics.js"></script><script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-63358219-1', 'auto'); ga('send', 'pageview'); 
+		</script>
+
 	</head>
 	<body>
 		<style type="text/css">
@@ -13,8 +36,7 @@
 				overflow: hidden;
 			    position: relative;
 			}
-			#left {
-				background-color: #fff;
+			.panel {
 				width: 33.3%;
 				height: 100%;
 				margin: 0;
@@ -22,31 +44,32 @@
 				margin-right: -4px;
 				padding-top: 8px;
 				display: inline-block;
-				border-right: 1px solid #555;
 				text-align: center;
+			}
+			#left {
+				background-color: #fff;
 			}
 			#center {
 				background-color: #555;
-				width: 33.3%;
-				height: 100%;
-				margin: 0;
-				padding: 0;
-				margin-right: -4px;
-				padding-top: 8px;
-				display: inline-block;
-				border-right: 1px solid #555;
-				text-align: center;
 			}
 			#right {
 				background-color: #333;
-				width: 33.3%;
-				height: 100%;
-				margin: 0;
-				padding: 0;
-				margin-right: -4px;
-				padding-top: 8px;
-				display: inline-block;
+			}
+			#directions {
+				position: absolute;
+				width: 100%;
 				text-align: center;
+				z-index: 1000;
+				bottom: 20px;
+
+			}
+			#directions p {
+				background-color: rgba(255,255,255,0.65);
+				color: #555;
+				border-radius: 5px;
+				width: 520px;
+				line-height: 25px;
+				margin: 0 auto;
 			}
 			input, input:focus, input:hover, input:active {
 				/*remove style*/
@@ -57,22 +80,26 @@
 				border-color: none !important;
 				box-shadow: none !important;
 				/*add style*/
+				background-color: rgba(255,255,255,0.65);
+				color: #555;
 				text-align: center;
-				border-radius: 8px;
+				border-radius: 5px;
 				padding: 5px;
 				font-size: .9em;
-				border: 1px solid #aaa !important;
 			}
 		</style>
 
-		<div id="left">
-			<input id="left-color" type="text" name="left-color" placeholder="Left Panel Color" onkeyup="updateColor()" value="#fff">
+		<div id="left" class="panel">
+			<input id="left-color" type="text" name="left-color" placeholder="enter hex, rgb, or rgba" onkeyup="updateColor()" value="#fff">
 		</div>
-		<div id="center">
-			<input id="center-color" type="text" name="center-color" placeholder="Center Panel Color" onkeyup="updateColor()" value="#555">
+		<div id="center" class="panel">
+			<input id="center-color" type="text" name="center-color" placeholder="enter hex, rgb, or rgba" onkeyup="updateColor()" value="#555">
 		</div>
-		<div id="right">
-			<input id="right-color" type="text" name="right-color" placeholder="Right Panel Color" onkeyup="updateColor()" value="#333">
+		<div id="right" class="panel">
+			<input id="right-color" type="text" name="right-color" placeholder="enter hex, rgb, or rgba" onkeyup="updateColor()" value="#333">
+		</div>
+		<div id="directions">
+			<p>Directions: Set panel color using the input, then press 'Enter' to update colors.</p>
 		</div>
 
 
@@ -84,7 +111,6 @@
 				document.getElementById("left").style.backgroundColor = localStorage.getItem("left-color");
 				document.getElementById("center").style.backgroundColor = localStorage.getItem("center-color");
 				document.getElementById("right").style.backgroundColor = localStorage.getItem("right-color");
-				// updateColor();
 			};
 
 
