Update title tag

--- a/color-compare.html
+++ b/color-compare.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" name="viewport">
-		<title>Hanni Abu | Color Compare</title>
+		<title>Color Compare | Hanni Abu</title>
 		<meta content="Easily compare multiple colors side-by-side online for free." name="description">
 		<meta content="color, compare, online, free hex, rgb, rgba" name="keywords">
 		<meta content="Hanni Abu" name="author">
@@ -19,7 +19,7 @@
 		<meta content="assets/img/logo.gif">
 		<meta content="Easily compare multiple colors side-by-side online for free.">
 		<meta content="index.html" name="twitter:url">
-		<meta content="Hanni Abu | Color Compare" name="twitter:title">
+		<meta content="Color Compare | Hanni Abu" name="twitter:title">
 		<meta content="Easily compare multiple colors side-by-side online for free." name="twitter:description">
 		<meta content="assets/img/logo.gif" name="twitter:image">
 		<script async="" src="//www.google-analytics.com/analytics.js"></script><script>
